fix: [PIE-1978]: configure options alignment issues (#6534)
* fix: configure options alignment issues

* fix: snapshot

--- a/src/modules/75-cd/components/PipelineSteps/KubernetesInfraSpec/KubernetesInfraSpec.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/KubernetesInfraSpec/KubernetesInfraSpec.module.scss
@@ -22,6 +22,7 @@
 }
 
 .formRow {
+  align-items: center;
   :global {
     .bp3-form-group {
       &.bp3-disabled .bp3-label {
@@ -41,6 +42,7 @@
 }
 
 .connectorRef {
+  align-items: center;
   padding-bottom: 0px !important;
 }
 
